add file uploader

--- a/css/creative.css
+++ b/css/creative.css
@@ -474,3 +474,21 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: #222;
 }
+.successGreen{
+    color: #5cb85c;
+}
+.warnYellow{
+    color:#f0ad4e;
+}
+.errorRed{
+    color: #d9534f;
+}
+/* numbered buttons */
+#status-buttons                 {  }
+#status-buttons a               { color:#FFF; display:inline-block; font-size:12px; margin-right:10px; text-align:center; text-transform:uppercase; }
+#status-buttons a:hover         { text-decoration:none; }
+#status-buttons span            { background:#080808; display:block; height:30px; margin:0 auto 10px; padding-top:5px; width:30px;
+    border-radius:50%; }
+
+/* active buttons */
+#status-buttons a.active span   { background:#00BC8C; }
