--- a/scripts/imageUpload/view/clientInfo.html
+++ b/scripts/imageUpload/view/clientInfo.html
@@ -1,3 +1,44 @@
-<div class="container">
-    info
+<div class="form-group">
+    <div class="col-lg-2">
+    <label style="width: 100px;">Name</label>
+        </div>
+    <div class="col-lg-10">
+    <input style="width: 80%; margin-bottom: 10px;" type="text" class="" ng-model="formData.name">
     </div>
+</div>
+
+<div class="form-group">
+    <div class="col-lg-2">
+    <label style="width: 100px;">Email</label>
+        </div>
+    <div class="col-lg-10">
+    <input style="width: 80%; margin-bottom: 10px;" type="text" class=""ng-model="formData.email">
+        </div>
+</div>
+
+<div class="form-group">
+    <div class="col-lg-2">
+    <label style="width: 100px;">Address</label>
+        </div>
+    <div class="col-lg-10">
+    <textarea style="width: 80%; margin-bottom: 10px;" type="" class=""ng-model="formData.email"></textarea>
+        </div>
+</div>
+
+<div class="form-group">
+    <div class="col-lg-2">
+    <label style="width: 100px;">Contact No</label>
+        </div>
+    <div class="col-lg-10">
+    <input style="width: 80%; margin-bottom: 10px;" type="text" class=""ng-model="formData.email">
+        </div>
+</div>
+
+<!--
+<div class="form-group row">
+    <div class="col-xs-6 col-xs-offset-3">
+        <a ui-sref="form.interests" class="btn btn-block btn-info">
+            Next Section <span class="glyphicon glyphicon-circle-arrow-right"></span>
+        </a>
+    </div>
+</div>-->
