--- a/scripts/main/view/main.html
+++ b/scripts/main/view/main.html
@@ -38,7 +38,7 @@
         <hr>
         <p>print everything. need to fill with meaningful short sentence.</p>
         <input type="button" class="btn btn-primary btn-xl page-scroll" style="width: 150px;" value="Photos"
-               ng-click="changeView('/uploadimages')">
+               ng-click="changeView('uploadimages/upload')">
         <input type="button" class="btn btn-primary btn-xl page-scroll"
                style="width: 150px;background-color: transparent !important; border-width: 2px !important;"
                value="Documents">
