--- a/scripts/fileUpload/view/clientVerification.html
+++ b/scripts/fileUpload/view/clientVerification.html
@@ -1,3 +1,7 @@
-<div class="container">
+<div class="container pp-step-wrapper animated fadeIn">
+    <div class="step-heading">
+        <h1><span>Step 3.</span> Payments & Verification</h1>
+        <p>Enter payment & verfication information here</p>
+    </div>
     verification
 </div>
