--- a/scripts/main/view/main.html
+++ b/scripts/main/view/main.html
@@ -1,4 +1,4 @@
-<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top printpal-nav">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#main">Printpal</a>
+            <a class="navbar-brand page-scroll" href="#main"><span class="printpal-logo"><i class="flaticon-technology"></i></span>printpal</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -31,7 +31,8 @@
     <!-- /.container-fluid -->
 </nav>
 
-<section id="main" class="header">
+<section id="main" class="header large-header printpal-header">
+    <canvas id="demo-canvas"></canvas>
     <div class="header-content">
     <div class="header-content-inner">
         <h1>Printpal</h1>
@@ -39,8 +40,8 @@
         <p>print everything. need to fill with meaningful short sentence.</p>
         <input type="button" class="btn btn-primary btn-xl page-scroll" style="width: 150px;" value="Photos"
                ng-click="changeView('uploadimages/upload')">
-        <input type="button" class="btn btn-primary btn-xl page-scroll"
-               style="width: 150px;background-color: transparent !important; border-width: 2px !important;"
+        <input type="button" class="btn btn-primary btn-xl page-scroll button-outlined"
+               ng-click="changeView('uploadfiles/upload')"
                value="Documents">
     </div>
         </div>
@@ -61,21 +62,21 @@
                 <div class="service-box">
                     <i class="fa fa-4x fa-camera wow bounceIn text-primary"></i>
                     <h3>Photo printing</h3>
-                    <p class="text-muted">xxxx xxxx xxxx xxxx xxx xxxx xxx. xxxx xxx xxxx xxx xxxx xxx</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lobortis mi, a tempor mauris.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-file-text-o wow bounceIn text-primary" data-wow-delay=".1s"></i>
                     <h3>Document printing</h3>
-                    <p class="text-muted">xxxx xxxx xxxx xxxx xxx xxxx xxx. xxxx xxx xxxx xxx xxxx xxx</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lobortis mi, a tempor mauris.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-paper-plane-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
                     <h3>Deliver to home</h3>
-                    <p class="text-muted">xxxx xxxx xxxx xxxx xxx xxxx xxx. xxxx xxx xxxx xxx xxxx xxx</p>
+                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lobortis mi, a tempor mauris.</p>
                 </div>
             </div>
         </div>
@@ -88,8 +89,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">We've got what you need!</h2>
                 <hr class="light">
-                <p class="text-faded">xxxx xxxx xxxxx xxx xxxxx xxxx xxxx xxxxx xxxxx xxxx xxxxx xxxxx xxxxx. xxxx xxxx
-                    xxxxx xxxxx xxxx xxxx xxxx xxx. xxxx xxxx xxxx xxx xxx xxxxx. xxx xxxxx xxxx xxxxx. xxxx xxxxx</p>
+                <p class="text-faded">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lobortis mi, a tempor mauris.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lobortis mi, a tempor mauris.</p>
             </div>
         </div>
     </div>
@@ -101,8 +102,8 @@
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Let's Get In Touch!</h2>
                 <hr class="primary">
-                <p>xxxx xxxxxx xxxxxx xxxxx xxxxxxx xxxxxxxxxxx xxxxxxxxxx xxxxxxxxx xxxxxxxxxxx xxxxxxxxx xxxxxxxxxx
-                    xxxxx. xxxxx xxxxx xxx xxxx xxx xxxx.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lobortis mi, a tempor mauris.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce eu lobortis mi, a tempor mauris.</p>
             </div>
             <div class="col-lg-4 col-lg-offset-2 text-center">
                 <i class="fa fa-phone fa-3x wow bounceIn"></i>
